# wordle-solver-py

./: .gitignore  .pre-commit.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md  general_issue.md  umbrella_issue.md
test/: conftest.py
wordle_solver/: solvers.py  wordle.py
